# meet-your-new-client

./: .gitignore  LICENSE  README.md  documents.csv  main.py  pyproject.toml
config/: config.yaml  litellm_config.yaml  redis.conf
data/questions/: questions.json
paper/: bibliography.bib  paper.qmd
src/: __init__.py  convert_docling.py  convert_marker.py  convert_markitdown.py  convert_modal.py  convert_zerox.py  llm.py  step1_convert.py  step2_answer.py  step3_judge.py  utils.py
